Fix compile warnings Upgrade to jdk10